# cpp-sw-design-examples

./: .gitignore  CMakeLists.txt  README.md
cmake/: dependencies.cmake
examples/: CMakeLists.txt  test_countif.cpp  test_functional.cpp  test_observer.cpp  test_pound_a_peg.cpp  test_shape_strategy.cpp  test_shape_visitor.cpp  test_shapes.cpp
include/: fold.hpp  func_support.hpp  round_pegs.hpp  shape.hpp  shape_operations.hpp  shape_strategy.hpp  shape_visitor.hpp  square_pegs.hpp
include/observer/: observer.hpp  robot.hpp
include/peg_adapters/: square_peg_adapter.hpp
include/shape_fmt/: shape_fmt.hpp
include/shape_stdio/: shape_stdio.hpp
include/visitor/: shape_operations.hpp  shape_variant.hpp  shape_visitor.hpp
visitor/: CMakeLists.txt  test_shape_visitor.cpp  test_shape_visitor_variant.cpp
